# bsg

./: .gitattributes  .gitignore
backend/: README.md  pyproject.toml  requirements.txt  run_dev_server.ps1
backend/app/: __init__.py  main.py
backend/app/agents/: QUALITY_INTELLIGENCE_V1_GAPS.md  __init__.py  client_interaction.py  delivery_performance.py  quality_intelligence.py
backend/app/api/: deps.py
backend/app/core/: config.py  constants.py  cookies.py  csrf.py  exceptions.py  jwt_utils.py  rate_limit.py  (+2 more)
backend/scripts/: apply_calibration_briefs_migration.py  apply_migrations.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_calibration.py  test_delivery_chat_grounding.py  test_delivery_conversation_auth.py  test_delivery_rbac.py  test_delivery_scoring.py  test_governance.py  test_governance_charter.py  test_governance_charter_export.py  test_governance_phase8.py  test_governance_summary.py  test_knowledge_bootstrap.py  test_knowledge_feedback.py  test_knowledge_retrieval.py  test_lesson_writeback.py  test_me.py  test_oka_client.py  test_organisations_rbac.py  test_quality_acceptance.py  test_quality_agent_query.py  test_quality_api.py  test_quality_citations.py  test_quality_comms.py  test_quality_drift.py  test_quality_root_cause.py  test_quality_scan.py  test_quality_signal.py  test_quality_signal_consumer.py  test_quality_summary.py  test_quality_taxonomy.py  test_rbac.py  test_root_cause_v2.py  test_sop_ambiguity.py  test_tenant_isolation.py  test_users_api.py  test_what_if.py  test_workforce_agent.py  test_workforce_capability_gaps.py  (+5 more)
(+338 files in other folders)
