[project]
name = "bsg-operations-tower-backend"
version = "0.1.0"
description = "FastAPI backend for the BSG Operations Tower"
requires-python = ">=3.12,<3.13"
dependencies = [
  "asyncpg==0.29.0",
  "fastapi==0.111.1",
  "pydantic-settings==2.3.4",
  "pyjwt==2.8.0",
  "python-dotenv==1.0.1",
  "sqlalchemy[asyncio]==2.0.31",
  "uvicorn[standard]==0.30.1",
]

[project.optional-dependencies]
dev = [
  "httpx==0.27.0",
  "mypy==1.10.1",
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "ruff==0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
